# SteamworksVision2017

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  Settings.json  TODO.sh  compile_commands_relative_paths.sh  runcmake.sh  vimsession.vim
include/: DummyCamera.hpp  Histogram.hpp  Median.hpp  MiscImgproc.hpp  MultiBitEncoder.hpp  Networking.hpp  PegFinder.hpp  RealSense.hpp  Saving.hpp  Settings.hpp  SlidersTwo.hpp  SplineCalc.hpp  StringHack.hpp  StripeMatcher.hpp  VideoInterface.hpp
notes/: classifiers  dimensions  misc
scripts/: attach_xpra.sh  compile_commands_relative_paths.sh  ffserver.conf  fulltest.sh  keepalive.sh  killvision.sh  plot.sh  plot_remote.sh  plotsettings.plot  runcmake.sh  runserv.sh  setexposure.sh  start_xpra.sh  streamffmpeg.sh  synctime.sh  testclient.sh
src/: DummyCamera.cpp  Histogram.cpp  Median.cpp  MiscImgproc.cpp  MultiBitEncoder.cpp  Networking.cpp  PegFinder.cpp  RealSense.cpp  Saving.cpp  SlidersTwo.cpp  SplineCalc.cpp  StripeMatcher.cpp  main.cpp
test_models/: DepthCalc.blend
